apps/prod/whoami/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-prod
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami-prod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: whoami-prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: whoami-prod-sa
      automountServiceAccountToken: false
      containers:
      - name: whoami
        image: traefik/whoami:v1.11.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "150m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - "ALL"

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-prod
  namespace: prod
spec:
  selector:
    app: whoami-prod
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-prod-route
  namespace: prod
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra
  hostnames:
  - "test.wminor.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prod
    backendRefs:
    - name: whoami-prod
      port: 80
